--- a/vuejs-vite/index.html
+++ b/vuejs-vite/index.html
@@ -1,13 +1,35 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue</title>
+    <link
+      href="http://fonts.googleapis.com/css?family=Lato:400,300,700"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
+    />
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="./src/assets/js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="./src/assets/js/vendor/jquery-1.10.2.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <script src="./src/assets/js/jquery.lwtCountdown-1.0.js"></script>
+    <script src="./src/assets/js/bootstrap.min.js"></script>
+    <script src="./src/assets/js/owl.carousel.min.js"></script>
+    <script src="./src/assets/js/jquery.validate.min.js"></script>
+    <script src="./src/assets/js/jquery.form.js"></script>
+    <script src="./src/assets/js/jquery.nav.js"></script>
+    <script src="./src/assets/js/jquery.sticky.js"></script>
+    <script src="./src/assets/js/plugins.js"></script>
+    <script src="./src/assets/js/wow.min.js"></script>
+    <script src="./src/assets/js/main.js"></script>
   </body>
 </html>
